dim tables are added to data warehouse layer

--- a/dbt_project.yml
+++ b/dbt_project.yml
@@ -35,3 +35,6 @@ models:
     staging:
       +schema: stg_northwind
       +materialized: view
+    warehouse:
+      +schema: dwh_northwind
+      +materialized: table
