models customer_reporting, product_inventory, sales_overview are added to analytics_obt  layer

--- a/dbt_project.yml
+++ b/dbt_project.yml
@@ -38,3 +38,6 @@ models:
     warehouse:
       +schema: dwh_northwind
       +materialized: table
+    analytics_obt:
+      +schema: obt_northwind
+      +materialized: table  
